# Major_Project_SFRC-RC

./: README.md  SFRC.py  app.py  project.ipynb  requirements.txt
eng_module/: ENG_MODULE_README.md  README.md  aisc_db_si.csv  columns.py  excel_engine.py  load_factors.py  plots.py  reports.py  sections_db.py  test_beams.py  test_columns.py  test_excel_engine.py  test_sections_db.py  utils.py
eng_module/templates/: sp_template.docx  sp_template_empty.docx
eng_module/test_data/: Basic Concrete Footing.xlsx  beam_3.txt  beam_4.txt  test_column_data.csv
flitfolder/: LICENSE  pyproject.toml
flitfolder/src/SFRC/: __init__.py  app.py
flitfolder/src/SFRC-RC/: __init__.py  app.py
flitfolder/src/SFRC-RC/eng_module/: beams.py
flitfolder/src/SFRC/eng_module/: SFRC.py  beams.py  utils.py
flitfolder/tests/: test_SFRC.py  test_beams.py  test_utils.py
flitfolder/tests/test_data/: beam_1.txt  beam_2.txt  beam_5.txt  test_csv.csv  test_csv.xlsx  test_csv_res.csv
